fixed like button overflow and scroll performance

--- a/styles/test.module.scss
+++ b/styles/test.module.scss
@@ -8,6 +8,10 @@
   transform: scaleX(1);
 }
 
+.scroll {
+  transform: translateZ(0);
+}
+
 .heart {
   left: -16px;
   top: -6px;
